[gd_scene load_steps=2 format=3 uid="uid://c4k1u2r3s4h5p"]

[ext_resource type="Script" uid="uid://d7h8o9p0s1h2p" path="res://scripts/UI/shop.gd" id="1_s0h0p"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s0h0p")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.08, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 24.0
offset_right = 100.0
offset_bottom = 54.0
grow_horizontal = 2
horizontal_alignment = 1
text = "Shop"

[node name="PackPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -120.0
offset_right = 180.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="PackContent" type="VBoxContainer" parent="PackPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PackNameLabel" type="Label" parent="PackPanel/PackContent"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
horizontal_alignment = 1
text = "Forest Pack"

[node name="PriceLabel" type="Label" parent="PackPanel/PackContent"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
horizontal_alignment = 1
text = "20g"

[node name="BuyButton" type="Button" parent="PackPanel/PackContent"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Buy"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -60.0
offset_right = 224.0
offset_bottom = -20.0
grow_vertical = 0
text = "Back"
